# haskell-hello

./: .gitignore  cabal.project  hello.cabal
hello/lib/: Library.hs
hello/src/: Main.hs
