cabal-version:       2.4
name:                hello
version:             0.0.1

library libhello
  default-language:    Haskell2010
  hs-source-dirs:      hello/lib
  exposed-modules:     Library
  build-depends:       base >= 4.14.3.0 && < 5

executable hello
  default-language:    Haskell2010
  hs-source-dirs:      hello/src
  main-is:             Main.hs
  build-depends:       base >= 4.14.3.0 && < 5,
                       libhello
